[package]
name = "r-extcap"
version = "0.1.0"
edition = "2021"
authors = ["Maurice Lam <mauriceprograms@gmail.com>"]
description = "Write Wireshark extcap programs in Rust"
documentation = "https://docs.rs/r-extcap"
readme = "README.md"
repository = "https://github.com/mauricelam/r-extcap/"
license = "MIT"
keywords = ["extcap", "wireshark", "pcap"]
categories = ["parser-implementations", "command-line-utilities"]

[workspace]
members = ["extcap-example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = { version = "0.1.64", optional = true }
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
nom = "7.1.3"
nom-derive = "0.10.0"
pcap-file = "2.0.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"], optional = true }
typed-builder = "0.12.0"

[features]
default = ["sync", "async"]
async = ["tokio", "async-trait"]
sync = []

[dev-dependencies]
env_logger = "0.10.0"
indoc = "2.0.0"
regex = "1.7.1"
lazy_static = "1.4.0"
