# Cargo manifest for the extcap-example project. This is a separate cargo
# project instead of being a regular [[example]] to enable automated CLI testing
# using `assert_cmd`.

[package]
name = "extcap-example"
version = "0.1.0"
edition = "2021"
homepage = "https://gitlab.com/wireshark/wireshark/-/blob/master/doc/extcap_example.py"
description = "Extcap example program for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "extcap-example"

[dependencies]
r-extcap = {version = "0.2.0", path = ".."}
lazy_static = "1.4.0"
env_logger = "0.10.0"
regex = "1.7.1"
clap = { version = "4.1.7", features = ["derive"] }
anyhow = "1.0.69"
pcap-file = "2.0.0"
log = "0.4.17"

[dev-dependencies]
assert_cmd = "2.0.8"
indoc = "2.0.0"
nix = "0.26.2"
predicates = "2.1.5"
tempfile = "3.4.0"
