[package]
name = "rust-extcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
derive_builder = "0.12.0"
log = "0.4.17"
nom = "7.1.3"
nom-derive = "0.10.0"
pcap-file = "2.0.0"
tokio = { version = "1.25.0", features = ["full"], optional = true }
typed-builder = { path = "../rust-typed-builder" }

[features]
default = []

[[example]]
name = "extcap-example"

[dev-dependencies]
env_logger = "0.10.0"
regex = "1.7.1"
